<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C87ED"
    android:contentDescription="v">

    <Button
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/abc_vector_test"
        android:contentDescription="@string/seta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/categories"
        android:text="Categorias"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="414dp"
        android:layout_height="650dp"
        android:layout_marginBottom="-40dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="117dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/categories"
                android:text="Criar nova categoria"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="v"
                android:orientation="vertical"
                android:padding="16dp"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="335dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/card_border"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="41dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="-22dp"
                        android:contentDescription="nome"
                        android:src="@drawable/nome" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="-33dp"
                        android:contentDescription="@string/nome"
                        android:text="Nome"
                        android:textColor="#000000"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="335dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/card_border"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="19dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/descricao"
                        android:src="@drawable/descricao" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="-20dp"
                        android:contentDescription="@string/descricao"
                        android:text="Descrição"
                        android:textColor="#000000"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="335dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/card_border"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="33dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="7dp"
                        android:contentDescription="@string/orcamento"
                        android:src="@drawable/orcamento" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="-22dp"
                        android:contentDescription="@string/orcamento"
                        android:text="Orçamento"
                        android:textColor="#000000"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="335dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/card_border"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView20"
                        android:layout_width="22dp"
                        android:layout_height="26dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="13dp"
                        android:contentDescription="@string/cor"
                        android:src="@drawable/cor" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="-26dp"
                        android:contentDescription="@string/cor"
                        android:text="Cor"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView25"
                                android:layout_width="27dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="45dp"
                                android:layout_marginTop="20dp"
                                android:contentDescription="@string/bolinha"
                                android:src="@drawable/bolinhaamarela2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView26"
                                android:layout_width="25dp"
                                android:layout_height="23dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:contentDescription="@string/bolinha"
                                android:src="@drawable/bolinhacinza"
                                app:layout_constraintStart_toEndOf="@+id/imageView25"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView27"
                                android:layout_width="25dp"
                                android:layout_height="23dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:contentDescription="@string/bolinha"
                                android:src="@drawable/bolinhaverde2"
                                app:layout_constraintStart_toEndOf="@+id/imageView26"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView28"
                                android:layout_width="25dp"
                                android:layout_height="23dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:contentDescription="@string/bolinha"
                                android:src="@drawable/bolinhavinho"
                                app:layout_constraintStart_toEndOf="@+id/imageView27"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView29"
                                android:layout_width="27dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:contentDescription="@string/bolinha"
                                android:src="@drawable/bolinhavioleta"
                                app:layout_constraintStart_toEndOf="@+id/imageView28"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView30"
                                android:layout_width="25dp"
                                android:layout_height="23dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:contentDescription="@string/bolinha"
                                android:src="@drawable/bolinhaciano"
                                app:layout_constraintStart_toEndOf="@+id/imageView29"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="90dp"
                    android:layout_height="92dp"
                    android:layout_marginLeft="145dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#00FFFFFF"
                    tools:src="@drawable/mais" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/bolinha"
        android:src="@drawable/bolinharosa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/alimentacao"
        android:text="Alimentação"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/bolinha"
        android:src="@drawable/bolinhaamarela"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/moradia"
        android:text="Moradia"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/bolinha"
        android:src="@drawable/bolinharoxa"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/transporte"
        android:text="Transporte"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/bolinha"
        android:src="@drawable/bolinhamarrom"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/lazer"
        android:text="Lazer"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />
</androidx.constraintlayout.widget.ConstraintLayout>